+ New feature: added support for setting JUL-configuration options using system properties e.g. -Dorg.graylog2.logging.GelfHandler.additionalField.foo=bar

--- a/src/test/resources/org/graylog2/logging/logging-test.properties
+++ b/src/test/resources/org/graylog2/logging/logging-test.properties
@@ -5,4 +5,5 @@ handlers=org.graylog2.logging.GelfHandler
 org.graylog2.logging.GelfHandler.level = ALL
 org.graylog2.logging.GelfHandler.extractStacktrace = true
 org.graylog2.logging.GelfHandler.additionalField.0 = foo=bar
+org.graylog2.logging.GelfHandler.additionalField.1 = bar=heck
 org.graylog2.logging.GelfHandler.facility = test
