+ Change: most of sender configuration parameters can be passed with single uri: tcp://target:port?keepalive=true&sendBufferSize=10000 + Change: log4j appender parameters have changed slightly :-(

--- a/src/test/resources/org/graylog2/logging/logging-test.properties
+++ b/src/test/resources/org/graylog2/logging/logging-test.properties
@@ -3,6 +3,7 @@ handlers=org.graylog2.logging.GelfHandler
 .level = ALL
 
 org.graylog2.logging.GelfHandler.level = ALL
+org.graylog2.logging.GelfHandler.targetURI = udp://localhost:12000
 org.graylog2.logging.GelfHandler.extractStacktrace = true
 org.graylog2.logging.GelfHandler.additionalField.0 = foo=bar
 org.graylog2.logging.GelfHandler.additionalField.1 = bar=heck
