--- a/pom.xml
+++ b/pom.xml
@@ -65,13 +65,7 @@
 			<version>3.0.4</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- JSON -->
-		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1</version>
-			<scope>compile</scope>
-		</dependency>
+		<!-- Unit test -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -79,9 +73,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>18.0-rc1</version>
+			<version>18.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
