+ Added exception tracker (used for supressing repeated exceptions) + Made GelfFormatter independent of GelfHandler. You can now log to files/console in json format using jul + Documented FieldExtractor configuration parameter (Loose coupling for passing custom fields from applications)

--- a/src/test/resources/org/graylog2/logging/logging-test.properties
+++ b/src/test/resources/org/graylog2/logging/logging-test.properties
@@ -2,9 +2,18 @@ handlers=org.graylog2.logging.GelfHandler
 .handlers=org.graylog2.logging.GelfHandler
 .level = ALL
 
+consoleTest.handlers=java.util.logging.ConsoleHandler
+consoleTest.useParentHandlers=false
+java.util.logging.ConsoleHandler.formatter=org.graylog2.logging.GelfFormatter
+
 org.graylog2.logging.GelfHandler.level = ALL
 org.graylog2.logging.GelfHandler.targetURI = udp://localhost:12000
 org.graylog2.logging.GelfHandler.extractStacktrace = true
 org.graylog2.logging.GelfHandler.additionalField.0 = foo=bar
 org.graylog2.logging.GelfHandler.additionalField.1 = bar=heck
 org.graylog2.logging.GelfHandler.facility = test
+
+org.graylog2.logging.GelfFormatter.extractStacktrace = true
+org.graylog2.logging.GelfFormatter.additionalField.0 = foo=bar
+org.graylog2.logging.GelfFormatter.additionalField.1 = bar=heck
+org.graylog2.logging.GelfFormatter.facility = test
