--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 
 	<scm>
-		<connection>scm:git:git@github.com:t0xa/gelfj.git</connection>
-		<developerConnection>scm:git:git@github.com:t0xa/gelfj.git</developerConnection>
-		<url>git@github.com:t0xa/gelfj.git</url>
+		<connection>scm:git:git@github.com:skorhone/gelfj.git</connection>
+		<developerConnection>scm:git:git@github.com:skorhone/gelfj.git</developerConnection>
+		<url>git@github.com:skorhone/gelfj.git</url>
 		<tag>HEAD</tag>
 	</scm>
 
@@ -106,19 +106,6 @@
 						<id>attach-sources</id>
 						<goals>
 							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
 						</goals>
 					</execution>
 				</executions>
