--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
 	</scm>
 
 	<groupId>org.graylog2</groupId>
-	<artifactId>gelfj</artifactId>
-	<version>1.1.16-SNAPSHOT</version>
+	<artifactId>gelfj-alt</artifactId>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>gelfj</name>
 	<description>GELF implementation in Java and log4j appender without any dependencies.</description>
-	<url>https://github.com/t0xa/gelfj</url>
+	<url>https://github.com/skorhone/gelfj</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -169,7 +169,7 @@
 
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/t0xa/gelfj/issues</url>
+		<url>https://github.com/skorhone/gelfj/issues</url>
 	</issueManagement>
 
 	<ciManagement>
