+ Change: repository name change (gelf-alt)

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 
 	<scm>
-		<connection>scm:git:git@github.com:skorhone/gelfj.git</connection>
-		<developerConnection>scm:git:git@github.com:skorhone/gelfj.git</developerConnection>
-		<url>git@github.com:skorhone/gelfj.git</url>
+		<connection>scm:git:git@github.com:skorhone/gelfj-alt.git</connection>
+		<developerConnection>scm:git:git@github.com:skorhone/gelfj-alt.git</developerConnection>
+		<url>git@github.com:skorhone/gelfj-alt.git</url>
 		<tag>HEAD</tag>
 	</scm>
 
@@ -20,9 +20,9 @@
 	<artifactId>gelfj-alt</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>gelfj</name>
+	<name>gelfj-alt</name>
 	<description>GELF implementation in Java and log4j appender without any dependencies.</description>
-	<url>https://github.com/skorhone/gelfj</url>
+	<url>https://github.com/skorhone/gelfj-alt</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -169,12 +169,12 @@
 
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/skorhone/gelfj/issues</url>
+		<url>https://github.com/skorhone/gelfj-alt/issues</url>
 	</issueManagement>
 
 	<ciManagement>
 		<system>Travis CI</system>
-		<url>https://travis-ci.org/skorhone/gelfj</url>
+		<url>https://travis-ci.org/skorhone/gelfj-alt</url>
 	</ciManagement>
 
 	<distributionManagement>
